# ytnoti

./: .env.example  .gitignore  .pylintrc  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE.md  README.md  main.py  pyproject.toml  readthedocs.yml  requirements.txt  ruff.toml  setup.py  ty.toml
.github/: FUNDING.yml
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: pylint.yml  pypi.yml  pytest.yml  ruff.yml  ty.yml
docs/: advanced.rst  changelog.rst  conf.py  faq.rst  index.rst  migration.rst  modules.rst  quickstart.rst  requirements  requirements.txt  ytnoti.models.rst  ytnoti.rst
docs/_templates/autosummary/: class.rst  method.rst
docs/classes/: async_youtube_notifier.rst  inmemory_video_history.rst  video_history.rst  youtube_notifier.rst
docs/data/: video.rst
docs/enums/: notification_kind.rst
docs/errors/: httperror.rst
examples/: .gitignore  decorators.py  history.py  logger.py  multiple_kinds.py  multithreading.py
examples/basic/: async.py  sync.py
examples/discord/: main.py  requirements.txt
examples/docker/: Dockerfile  docker-compose.yml  main.py
scripts/: pylint.sh  pytest.sh
tests/: __init__.py  test_async_youtube_notifier.py  test_errors.py  test_youtube_notifier.py
tests/history/: __init__.py  test_file.py  test_inmemory.py
youtube_push_notification/: __init__.py  models.py  types.py
ytnoti/: __init__.py  __main__.py  base.py  enums.py  errors.py  types.py
ytnoti/models/: __init__.py  history.py  notification.py  video.py
